src/objects/User_Story_Task__c.object
<CustomObject>
    <description>Tasks for a User Story</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Task description</description>
        <inlineHelpText>Task description</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <description>Number of hours for this Task</description>
        <inlineHelpText>Number of hours for this Task</inlineHelpText>
        <label>Estimated Hours</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>The unique case insensitive value for this record from another system. Only visible to Sys Admins.</description>
        <externalId>true</externalId>
        <inlineHelpText>The unique case insensitive value for this record from another system. Only visible to Sys Admins.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The rank of this User Story Task in relation to all others for the parent User Story</description>
        <inlineHelpText>The rank of this User Story Task in relation to all others for the parent User Story</inlineHelpText>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Hours_Indicator__c</fullName>
        <description>Visual indicator of remaining hours.
Red = above 66%
Yellow = between 66% and 33%
Green = less than 33%</description>
        <formula>IF( Remaining_Hours_Percentage__c &gt; 0.66, 
	IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;),
	IF( Remaining_Hours_Percentage__c &gt; 0.33,
		IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;yellow&quot;),
		IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Visual indicator of remaining hours.
Red = above 66%
Yellow = between 66% and 33%
Green = less than 33%</inlineHelpText>
        <label>Remaining Hours Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Hours_Percentage__c</fullName>
        <description>Remaining Hours divided by Estimated Hours</description>
        <formula>Remaining_Hours__c /  Estimated_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Remaining Hours divided by Estimated Hours</inlineHelpText>
        <label>Remaining Hours %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Remaining_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of hours remaining to complete this Task. The default value ensures the nightly SprintBurndown batch Apex doesn&apos;t fail.</description>
        <inlineHelpText>Total number of hours remaining to complete this Task</inlineHelpText>
        <label>Remaining Hours</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <description>The grandparent Sprint for this User Story. Set by a Workflow Field Update on every change.</description>
        <inlineHelpText>The grandparent Sprint for this User Story</inlineHelpText>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipName>User_Story_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <description>Visual indicator of Status</description>
        <formula>IMAGE (
	CASE(Status__c , 
		&quot;Done&quot;, &quot;/img/samples/flag_green.gif&quot;,
		&quot;Verify&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
		&quot;In Progress&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
		&quot;Not Started&quot;, &quot;/img/samples/flag_red.gif&quot;, 
		&quot;/s.gif&quot;), 
	&quot;User Story Status&quot;
)</formula>
        <inlineHelpText>Visual indicator of Status</inlineHelpText>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of this Task</description>
        <inlineHelpText>Status of this Task</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Id__c</fullName>
        <description>Unique value for this Task</description>
        <displayFormat>T-{000}</displayFormat>
        <inlineHelpText>Unique value for this Task</inlineHelpText>
        <label>Task Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Task_Rank__c</fullName>
        <description>Combination of the Status and Rank. Used for sorting related lists, list views etc</description>
        <formula>CASE( TEXT( Status__c ),
	&apos;Not Started&apos;, &apos;0-&apos;,
	&apos;In Progress&apos;, &apos;1-&apos;,
	&apos;Verify&apos;, &apos;2-&apos;,
	&apos;Done&apos;, &apos;3-&apos;,
	&apos;99-&apos;)
&amp;
IF(Rank__c &lt; 10, &apos;00&apos; &amp; TEXT( Rank__c ),
	IF(Rank__c &lt; 100, &apos;0&apos; &amp; TEXT( Rank__c ),
TEXT( Rank__c )))</formula>
        <inlineHelpText>Rank of this Task by Status, Not Started = 0, In Progress = 1, Verify = 2, Done = 3</inlineHelpText>
        <label>Task Rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <description>The parent User Story</description>
        <inlineHelpText>The parent User Story</inlineHelpText>
        <label>User Story</label>
        <referenceTo>User_Story__c</referenceTo>
        <relationshipLabel>User Story Tasks</relationshipLabel>
        <relationshipName>User_Story_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Story Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Sprint__c</columns>
        <columns>User_Story__c</columns>
        <columns>Rank__c</columns>
        <columns>NAME</columns>
        <columns>Estimated_Hours__c</columns>
        <columns>Remaining_Hours__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Task Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Story Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>